@@ -63,15 +63,40 @@ The fraud window time has been made configurable and can be updated in the appli
 fraud.detection.window=<value in defined chrono unit>
 fraud.detection.chrono-unit=<Chrono unit enum value>
 ```
-Please refer to https://docs.oracle.com/javase/8/docs/api/java/time/temporal/ChronoUnit.html for possible enum values of Chrono Unit.
+Please refer to [Chrono Unit](https://docs.oracle.com/javase/8/docs/api/java/time/temporal/ChronoUnit.html) for possible enum values.
 
-##### Assumptions Taken
+## Application Design
+The application is based on resilient distributed design to detect credit card frauds happening within a specified timeframe. It mainly consists of two components:
+* Transaction File Processing: The transaction file is read with Spark in different partitions parallelly. Different spark workers read the transactions and group them by the hashed credit card number in parallel. The transactions are then processed in parallel by the workers for fraud detection and output is provided.
+* Sliding Window: The sliding window stores the previous transaction (applicable for the sliding fraud window) in a sorted set for each hashed credit card. For each transaction, the outdated transactions which are out of the sliding fraud window, are removed from the set for efficient memory usage. The cache also keeps a record of the total transaction price for the sliding fraud window for each hashed card.
+Every transaction is processed and then total is compared with the fraud threshold to detect the fraud.
+Note: Java in-memory maps have been used as cache in the applicaton as of now. It can be switched to Redis, Memcache or any other optimized cache in future easily.
+
+## Assumptions Taken
 1. The combination of hashed credit card and timestamp will always be unique in the csv file, i.e. only single transaction can happen for a credit card at a time. 
    **Note**: For future, a unique transaction ID can be added in the csv file and can be used to overcome this assumption.
 2. In case there is a fraud for same card multiple times, it will be printed in the output multiple times. 
 
 
-## Application Design
-TODO
+## Application Logs
+All the application logs will be printed to the console.log file in the 'log' folder. The path of the log file can be updated by changing the below property.  The log file will be moved to <logging.folder.path>/archive folder on a daily basis as per the logging configuration.
+ ```
+ logging.folder.path=logs
+ ```
 
+## Important Points
 
+1. While running the application, you will get Warning logs for "Illegal Reflective Access" of JDK library by Spark libraries. It will not impact the running of the application and can be ignored. The same has already been raised to Spark and will be fixed in future Spark releases.
+```
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/C:/Users/arjunduggal/.m2/repository/org/apache/spark/spark-unsafe_2.12/3.0.1/spark-unsafe_2.12-3.0.1.jar) to constructor java.nio.DirectByteBuffer(long,int)
+WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+```
+
+2. In case you are running the application on Windows machine, you may see an Error log related to winutils binary for hadoop. It will not impact the running of the application and can be ignored. The same has already been raised to Spark as well as Hadoop and will be fixed in future Spark releases. As a workaround, the winutils.exe can be manually downloaded and hadoop home path can be pointed to it.
+```
+05-01-2021 21:13:18.976 [main] ERROR org.apache.hadoop.util.Shell.getWinUtilsPath - Failed to locate the winutils binary in the hadoop binary path
+java.io.IOException: Could not locate executable null\bin\winutils.exe in the Hadoop binaries
+```
